# Mycelium

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
crates/mycelium-cli/: Cargo.toml
crates/mycelium-cli/src/: main.rs  output.rs
crates/mycelium-cli/src/commands/: log.rs  memory.rs  mod.rs  network.rs  policy.rs  probe.rs  process.rs  security.rs  service.rs  storage.rs  system.rs  tuning.rs
crates/mycelium-core/: Cargo.toml
crates/mycelium-core/src/: audit.rs  error.rs  lib.rs  platform.rs
crates/mycelium-core/src/policy/: capability.rs  config.rs  mod.rs  profile.rs  rule.rs
crates/mycelium-core/src/types/: log.rs  memory.rs  mod.rs  network.rs  probe.rs  process.rs  security.rs  service.rs  storage.rs  system.rs  tuning.rs
crates/mycelium-core/tests/: policy_engine.rs
crates/mycelium-ebpf/: Cargo.toml
crates/mycelium-ebpf-common/: Cargo.toml
crates/mycelium-ebpf-common/src/: lib.rs
crates/mycelium-ebpf/src/: main.rs
crates/mycelium-linux/: Cargo.toml  build.rs
crates/mycelium-linux/src/: elf.rs  hooks.rs  lib.rs  memory.rs  network.rs  persistence.rs  platform.rs  probe.rs  process.rs  security.rs  service.rs  storage.rs  system.rs  tuning.rs
crates/mycelium-linux/tests/: ebpf_probes.rs  platform_privileged.rs  platform_read_only.rs
crates/mycelium-mcp/: Cargo.toml
crates/mycelium-mcp/src/: audit.rs  error_mapping.rs  lib.rs  main.rs  rate_limit.rs
crates/mycelium-mcp/src/tools/: log.rs  memory.rs  mod.rs  network.rs  probe.rs  process.rs  response.rs  security.rs  service.rs  storage.rs  system.rs  tuning.rs
crates/mycelium-mcp/tests/: tool_dispatch.rs
crates/mycelium-windows/: Cargo.toml
crates/mycelium-windows/src/: handle.rs  hooks.rs  lib.rs  memory.rs  network.rs  pe.rs  persistence.rs  platform.rs  privilege.rs  process.rs  security.rs  service.rs  storage.rs  system.rs  tuning.rs
docs/: architecture.md  cli.md  development.md  linux-backend.md  mcp-server.md  platform-api.md  policy.md  types.md  windows-backend.md
examples/: policy.toml
