[workspace]
resolver = "3"
members = [
	"crates/mycelium-core",
	"crates/mycelium-linux",
	"crates/mycelium-windows",
	"crates/mycelium-cli",
	"crates/mycelium-mcp",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Nishi"]
repository = "https://github.com/ItsNishi/Mycelium"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
