[package]
name = "mycelium-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI interface for Mycelium"

[[bin]]
name = "mycelium"
path = "src/main.rs"

[features]
default = []
ebpf = ["mycelium-linux/ebpf"]

[dependencies]
mycelium-core = { path = "../mycelium-core", features = ["serde", "toml"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
mycelium-linux = { path = "../mycelium-linux" }

[target.'cfg(target_os = "windows")'.dependencies]
mycelium-windows = { path = "../mycelium-windows" }
