[package]
name = "mycelium-ebpf"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Mycelium eBPF programs (syscall tracing, network monitoring)"

[[bin]]
name = "mycelium-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1.1"
mycelium-ebpf-common = { path = "../mycelium-ebpf-common" }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

[profile.release]
lto = true
panic = "abort"
