[package]
name = "mycelium-linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Linux backend for Mycelium"

[dependencies]
mycelium-core = { path = "../mycelium-core" }
nix = { version = "0.29", features = ["fs", "hostname", "net", "signal", "user"] }
