[package]
name = "mycelium-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server for Mycelium"

[[bin]]
name = "mycelium-mcp"
path = "src/main.rs"

[dependencies]
mycelium-core = { path = "../mycelium-core", features = ["serde", "toml"] }
rmcp = { version = "0.17", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
mycelium-linux = { path = "../mycelium-linux" }
