[package]
name = "mycelium-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Windows backend for Mycelium"

[target.'cfg(target_os = "windows")'.dependencies]
mycelium-core = { path = "../mycelium-core" }
sysinfo = "0.34"
windows = { version = "0.61", features = [
	"Win32_System_Threading",
	"Win32_System_ProcessStatus",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_NetworkManagement_IpHelper",
	"Win32_Security",
	"Win32_System_Services",
	"Win32_System_Registry",
	"Win32_System_SystemInformation",
	"Win32_Foundation",
] }
wmi = "0.14"
winreg = "0.55"
